tests/invalid/dictionary_member_requires_mutable_receiver.wio
fn Entry() -> i32 {
    let values: Dict<string, i32> = {
        "hp": 7
    };

    values.Remove("hp");
    return 0;
}
